--- a/extension/src/pages/panel/index.css
+++ b/extension/src/pages/panel/index.css
@@ -5,3 +5,24 @@
 	margin: 0;
 	padding: 0;
 }
+
+@layer base {
+	:root {
+		--text: #2b2103;
+		--text-disabled: #636363;
+		--background: #fffefa;
+		--primary: #2a5bef;
+		--secondary: #fbeec6;
+		--accent: #1146e4;
+		--disabled: #c4c4c4;
+	}
+	.dark {
+		--text: #fcf2d4;
+		--text-disabled: #636363;
+		--background: #050400;
+		--primary: #1041d5;
+		--secondary: #392c04;
+		--accent: #1b50ee;
+		--disabled: #c4c4c4;
+	}
+}
