--- a/extension/src/pages/panel/index.css
+++ b/extension/src/pages/panel/index.css
@@ -1,12 +1,12 @@
-*,
-*:before,
-*:after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
 @layer base {
+	*,
+	*:before,
+	*:after {
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+	}
+
 	:root {
 		--text: #2b2103;
 		--text-disabled: #636363;
@@ -16,6 +16,7 @@
 		--accent: #1146e4;
 		--disabled: #c4c4c4;
 	}
+
 	.dark {
 		--text: #fcf2d4;
 		--text-disabled: #636363;
@@ -24,5 +25,19 @@
 		--secondary: #392c04;
 		--accent: #1b50ee;
 		--disabled: #c4c4c4;
+	}
+
+	html {
+		color: var(--text);
+	}
+
+	h1 {
+		font-size: 1.25rem /* 20px */;
+		line-height: 1.75rem /* 28px */;
+	}
+
+	h2 {
+		font-size: 1.125rem /* 18px */;
+		line-height: 1.75rem /* 28px */;
 	}
 }
