Hello World from inspected node

--- a/extension/src/pages/panel/index.css
+++ b/extension/src/pages/panel/index.css
@@ -17,7 +17,7 @@
 		--background: #fffefa;
 		--primary: #2a5bef;
 		--secondary: #fbeec6;
-		--accent: #1146e4;
+		--accent: #cdd9ff;
 		--disabled: #c4c4c4;
 	}
 
